@@ -92,6 +92,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #691291: codecs.open() should not convert end of lines on reading and
+  writing.
+
 - Issue #7959: ctypes callback functions are now registered correctly
   with the cycle garbage collector.
 
